# semantik-plugin-openai

./: .gitignore  LICENSE  README.md  pyproject.toml
src/semantik_plugin_openai/: __init__.py  provider.py
tests/: __init__.py  test_provider.py
