[project]
name = "semantik-plugin-openai"
version = "1.0.0"
description = "OpenAI embeddings plugin for Semantik"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "jbmiller10" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.entry-points."semantik.plugins"]
openai-embeddings = "semantik_plugin_openai:OpenAIEmbeddingPlugin"

[project.urls]
Homepage = "https://github.com/jbmiller10/semantik-plugin-openai"
Repository = "https://github.com/jbmiller10/semantik-plugin-openai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantik_plugin_openai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
